cluster/kubernetes/apps/observability/grafana-operator/ingress/grafana-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas-cjso.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    route-label: external-dns-internal
  annotations:
    gatus.home-operations.com/enabled: 'true'
spec:
  hostnames:
    - grafana.local.cjsolsen.com
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: grafana
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
